--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,9 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Ariel', sans-serif;
   font-weight: 400;
-  background: linear-gradient(135deg, #e4916b, #ecebe7);
+  background: linear-gradient(135deg, #310b59, #ecebe7);
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -22,8 +22,8 @@ body {
   height: 36rem;
   display: grid;
   border-radius: 1rem;
-  box-shadow: 3px 3px 2px #e6b498;
-  background-image: linear-gradient(135deg, #d8a7e4, #43bbda);
+  box-shadow: 3px 3px 2px #d26eb4;
+  background-image: linear-gradient(135deg, #7ea1df, #4609df);
 }
 
 .card {
@@ -37,7 +37,7 @@ body {
   width: 24rem;
   height: 24rem;
   border-radius: 1rem;
-  box-shadow: -1px 1px #2e7272;
+  box-shadow: -1px 1px #125b30;
 }
 .card h2 {
   font-weight: 900;
